# python-clearlog

./: .gitignore  README.md  pyproject.toml
clearlog/: __init__.py  constants.py  logger.py
