[tool.poetry]
name = "python-clearlog"
version = "0.1.0"
description = "Efficiency first asynchronous JSONP logging for Python3."
authors = ["Blake VandeMerwe"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
